resources/app-sre-stage/launcher-quarkus-stage/launcher-quarkus.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: launcher-quarkus
  name: launcher-quarkus
spec:
  host: stage.code.quarkus.io
  port:
    targetPort: "8080"
  to:
    kind: Service
    name: launcher-quarkus
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
